Revert "clean slate"
This reverts commit 0d967d3849cefd00a603f018319fb4fce5b4a053.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Cookies-Cafe",
-  "version": "1.0.0",
+  "name": "vue-workspace-2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
